Test Cases for Fetch And Ajax

--- a/AsyncAndFetch/index.html
+++ b/AsyncAndFetch/index.html
@@ -10,9 +10,9 @@
 
     <p></p>
     <div></div>
-    <button onclick="fetching()">Get Data</button>
-    <button onclick="sendData()">Send Data</button>
-    <button onclick="updateData()">Update Data</button>
+    <button onclick="obj.getRequest.getAjax()">Get Data</button>
+    <button onclick="obj.postRequest.postFetch()">Send Data</button>
+    <button onclick="obj.putRequest.putAjax()">Update Data</button>
     <button onclick="deleteData()">Delete Data</button>
     <script src="Ajax.js"></script>
   </body>
