Test Cases for Fetch And Ajax

--- a/AsyncAndFetch/index.html
+++ b/AsyncAndFetch/index.html
@@ -13,7 +13,7 @@
     <button onclick="obj.getRequest.getAjax()">Get Data</button>
     <button onclick="obj.postRequest.postFetch()">Send Data</button>
     <button onclick="obj.putRequest.putAjax()">Update Data</button>
-    <button onclick="deleteData()">Delete Data</button>
-    <script src="Ajax.js"></script>
+    <button onclick="deleteAlert()">Delete Data</button>
+    <script src="App.js"></script>
   </body>
 </html>
